# skypro_store

./: .env.sample  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/fixtures/: articles.json
blog/migrations/: 0001_initial.py  0002_alter_article_options_alter_article_created_at.py  0003_alter_article_created_at.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: data.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at_and_more.py  0004_alter_product_image.py  0005_contact.py  0006_alter_product_created_at_alter_product_updated_at.py  0007_alter_product_created_at_alter_product_updated_at.py  0008_alter_product_created_at_alter_product_updated_at.py  0009_alter_product_created_at_alter_product_updated_at.py  0010_alter_product_price.py  0011_alter_product_updated_at.py  0012_version.py  0013_alter_version_unique_together.py
catalog/templates/catalog/: base.html  contacts.html  details.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_token.py
users/utils/: password_generator.py
(+10 files in other folders)
