[tool.poetry]
name = "sky-store"
version = "0.1.0"
description = ""
authors = ["speedfreak <gdramze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
ipython = "^8.24.0"
crispy-bootstrap4 = "^2024.1"
redis = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
